# playstore

./: .gitignore  Cargo.toml  Dockerfile  gen-ent.sh
.github/workflows/: docker-image.yml
bkp/: babel.config.json  package-lock.json  package.json
bkp/src/: App.tsx  RelayEnvironment.ts  schema.graphql
bkp/src/__generated__/: AppGamesQuery.graphql.ts
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_create_table_listed_app.rs
scripts/: insert_listed_apps.sql
src/: constants.rs  crawler.rs  errors.rs  google_play_api.rs  main.rs  repository.rs  schema.rs  webui.rs
src/entities/: app.rs  category.rs  developer.rs  listed_app.rs  mod.rs  prelude.rs
ui/: .gitattributes  package-lock.json  package.json  schema.graphql  watchman_ubuntu22.04_v2023.10.09.00.deb
ui/src/: App.css  App.js  ListedApp.js  RelayEnvironment.js  schema.graphql
ui/src/__generated__/: AppGamesQuery.graphql.js  ListedAppFragment.graphql.js
