[package]
name = "playstore-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "*"
sea-orm = { version = "*", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
dotenvy = "*"
serde = "*"
reqwest = { version = "*", features = ["json"] }
tokio = { version = "*", features = ["full"] }
chrono = { version = "*", features = ["serde"] }
serde_json = "*"
simple-error = "*"
error-chain = "*"
env_logger = "0.10.0"
log = "0.4.20"
poem = { version = "1.3.29" }
async-graphql = { version = "4.0.14", features = ["decimal", "chrono", "dataloader"] }
async-graphql-poem = { version = "4.0.14" }

[dependencies.seaography]
version = "*"
features = ["with-decimal", "with-chrono", "with-json"]
